add new good test cases